Fixed a busted puzzle on bothersome bog.

--- a/data/level/Forest/bothersome-bog.cfg
+++ b/data/level/Forest/bothersome-bog.cfg
@@ -17,6 +17,7 @@
 			},
 			"property_data": {
 				"stored_events": {
+					"": 0,
 					"bothersome_bog_platform_active": 0,
 					"started_game": 1
 				}
@@ -123,21 +124,6 @@
 			"type": "thunder_melon",
 			"x": 1276,
 			"y": 561
-		},
-		{
-			"_uuid": "068f1dd8bb9a480ebc84b39d84e012cc",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_25619a82",
-			"property_data": {
-				"_desired_height": 767,
-				"_x2_bound": 2944,
-				"_x_bound": 2488
-			},
-			"type": "moth_small",
-			"x": 2688,
-			"y": 736
 		},
 		{
 			"_uuid": "e7caff90b6924eacaf6b671566f252f6",
@@ -276,15 +262,6 @@
 			"type": "coin_silver",
 			"x": 3968,
 			"y": 864
-		},
-		{
-			"_uuid": "8ba6beaa5171431c9060b8ced3ca2267",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_3d48dd88",
-			"type": "thunder_melon",
-			"x": 4384,
-			"y": 785
 		},
 		{
 			"_uuid": "1de8f10d3cc84733befdb49f0546cec8",
@@ -624,18 +601,6 @@
 			"y": 64
 		},
 		{
-			"_uuid": "3ca0b700c6e041ecb987dfbc7533cd1b",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_4e556261",
-			"property_data": {
-				"event": "bothersome_bog_platform_active"
-			},
-			"type": "lever",
-			"x": 4288,
-			"y": 800
-		},
-		{
 			"_uuid": "e977b6fdc00c415e9e394d01eab5ce8a",
 			"current_frame": "normal",
 			"custom": true,
@@ -775,8 +740,8 @@
 			"face_right": false,
 			"label": "_26c6da16",
 			"type": "spider_black",
-			"x": 4096,
-			"y": 608
+			"x": 2879,
+			"y": 588
 		},
 		{
 			"_uuid": "c95ca52cf3264d2f999cb8a1c46c4021",
@@ -844,24 +809,6 @@
 			"type": "platform_swaying",
 			"x": 2272,
 			"y": 96
-		},
-		{
-			"_uuid": "c77d0c7fd8e54503acf49685e716b374",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "lever_platform",
-			"property_data": {
-				"_move_x1": 4704,
-				"_move_y1": 704,
-				"_move_y2": 944,
-				"is_zipline": false,
-				"rope_height": 128,
-				"stopped": 1,
-				"top_speed": 6
-			},
-			"type": "platform_swaying_vertical",
-			"x": 4704,
-			"y": 704
 		},
 		{
 			"_uuid": "72f8210e8ba041749252d34e55cb5d65",
@@ -1089,16 +1036,6 @@
 			"y": 415
 		},
 		{
-			"_uuid": "30ed3e8644a54d67acbefc8bb6612a5a",
-			"current_frame": "normal",
-			"custom": true,
-			"face_right": false,
-			"label": "_458caa61",
-			"type": "mushroom_captosser_blue",
-			"x": 4000,
-			"y": 799
-		},
-		{
 			"_uuid": "8753538c1ab34f53b387ad06ad8fd6c3",
 			"current_frame": "normal",
 			"custom": true,
@@ -1319,14 +1256,77 @@
 			"custom": true,
 			"label": "_5a4b648a",
 			"property_data": {
-				"_x2_bound": 3049,
-				"_x_bound": 2949,
-				"_y2_bound": 909,
-				"_y_bound": 609
+				"_x2_bound": 4034,
+				"_x_bound": 3934,
+				"_y2_bound": 964,
+				"_y_bound": 664
 			},
 			"type": "save_statue",
-			"x": 2969,
-			"y": 779
+			"x": 3954,
+			"y": 834
+		},
+		{
+			"_uuid": "47c92f6ac1144595b736866fb1a3c347",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1bbf5d0b",
+			"property_data": {
+				"event": "bothersome_bog_platform_active",
+				"original_level_we_spawned_on": "bothersome-bog.cfg"
+			},
+			"type": "pressure_plate_wooden",
+			"x": 4064,
+			"y": 830
+		},
+		{
+			"_uuid": "6e8c82f339ab45fab60d9cf62b32b847",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_75b5f508",
+			"property_data": {
+				"_move_x1": 4416,
+				"_move_x2": 4928,
+				"_move_y1": 608,
+				"_move_y2": 768,
+				"actual_speed": 0.93211,
+				"event": "bothersome_bog_platform_active",
+				"is_zipline": false,
+				"progress": 100,
+				"rope_height": 32,
+				"stopped": 0.0,
+				"top_speed": 10
+			},
+			"type": "platform_swaying",
+			"x": 4500,
+			"y": 724
+		},
+		{
+			"_uuid": "6149887f070d4567b68110ed279d03f5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5573d776",
+			"type": "scaffolding_beams2",
+			"x": 4907,
+			"y": 677
+		},
+		{
+			"_uuid": "3371db3333404be19c5c934b75ed6c2b",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_1348194d",
+			"type": "scaffolding_beams17",
+			"x": 4879,
+			"y": 648
+		},
+		{
+			"_uuid": "7d4fa3b1ae8146d3a3b8cc4d3487eba4",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_54410774",
+			"type": "scaffolding_beams1",
+			"x": 4888,
+			"y": 644
 		}
 	],
 	"dimensions": [-384,-736,6559,1151],
@@ -1734,8 +1734,8 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 ,
 ,
 ,
-,
-,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,,,,fbr
 ,
 ,
 ,
@@ -1768,6 +1768,16 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "rail_tracks"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfm,,,lfm,lfm,lfm,lfm,,,,,,,,,,,,,lfm,lfm,lfm,,,,lfm,lfm,lfm
