Some more sound fixes.

--- a/data/objects/enemies/milgram-hazards/trap_door.cfg
+++ b/data/objects/enemies/milgram-hazards/trap_door.cfg
@@ -24,7 +24,7 @@ on_process: "if(level.player.standing_on = _left_paddle or level.player.standing
 
 on_falldown: "if(should_trigger, [
 					set(_last_triggered,level.cycle),
-					sound('trapdoor-open'+1d3+'.wav',0.8),
+					play_sound__falloff('trapdoor-open', {max_volume: 0.8}),
 					fire_event(_left_paddle, 'falldown'),
 					fire_event(_right_paddle, 'falldown'),
 					schedule(100,fire_event('rise'))
@@ -88,7 +88,7 @@ object_type: [
 		on_process_rising: "if(abs(rotate) > 0, add(rotate, -1*facing), fire_event('solidify'))",
 
 		on_solidify: "	[
-							if(cycle>10, sound('trapdoor-close'+1d3+'.wav',0.6)),
+							if(cycle>10, play_sound__falloff('trapdoor-close', {max_volume: 0.6})),
 							set(rotate, 0),
 							set(platform_area, if(facing = -1, [0,23,27,24], [28,23,54,24])),
 							animation('walkable')
