--- a/data/objects/enemies/milgramen/kitty_ninja.cfg
+++ b/data/objects/enemies/milgramen/kitty_ninja.cfg
@@ -73,7 +73,7 @@ properties: {
 										],
 										[
 											animation('smokebomb'),
-											schedule(10,sound('smoke-bomb-throw'+1d4+'.wav',0.6))
+											schedule(10, play_sound__falloff('smoke-bomb-throw', {max_volume: 0.6}))
 										]
 									)",
 
@@ -108,7 +108,11 @@ on_end_shurikenFire_anim: "choose_action",
 on_end_jumpback_anim: "if(is_standing, animation('stand'), animation('jumpback'))",
 on_collide_feet: "if(is_standing and animation in ['jumpback'], animation('stand'))",
 on_change_solid_dimensions_fail: "schedule(3, set(solid_dimensions_in, ['enemy', 'common']))",
-on_end_smokebomb_anim: "[sound('smoke-seeping'+1d3+'.wav',0.8),spawn('kitty_ninja.smoke_spawner',mid_x, mid_y, facing),escape_to_start]",
+on_end_smokebomb_anim: "[
+	play_sound__falloff('smoke-seeping', {max_volume: 0.8}),
+	spawn('kitty_ninja.smoke_spawner',mid_x, mid_y, facing),
+	escape_to_start
+]",
 
 #on_become_active="escape_to_start"
 on_process_hide: "[set(facing, desired_facing),if(player_in_attack_area and (not player_facing_us) and (abs(_last_escape - cycle) > 300), begin_attack)]",
@@ -248,7 +252,7 @@ object_type: [
 		properties: {
 			attack_damage: 1,
 		},
-		on_collide_level: "[sound('shuriken-hits-stone'+1d5+'.wav',0.3),proto_event('shot','collide_level')]",
+		on_collide_level: "[play_sound__falloff('shuriken-hits-stone', {max_volume: 0.5}),proto_event('shot','collide_level')]",
 		on_process: "add(rotate,30)",
 		animation: {
 			id: "normal",
