--- a/data/objects/enemies/milgram-hazards/spiked_block.cfg
+++ b/data/objects/enemies/milgram-hazards/spiked_block.cfg
@@ -59,7 +59,7 @@ on_first_cycle: "[
 on_process_fall: "if(y + img_h > _y2_bound, [
 	animation('normal'), 
 	set(_winder.animation,'still'), 
-	play_sound__falloff('Thwump-Slam'), 
+	play_sound__falloff('Thwump-Slam', {falloff_dist: 500}), 
 	
 	schedule(_delay_rise, [
 		animation('rise'), 
