Switched the spiked blocks over to using a sound attache.

--- a/data/objects/enemies/milgram-hazards/spiked_block.cfg
+++ b/data/objects/enemies/milgram-hazards/spiked_block.cfg
@@ -108,15 +108,26 @@ animation: [
 	object_type: {
 		id: "chain_winder",
 		is_strict: true,
+		prototype: ["hittable"],
 		properties: {
 			attack_damage: "2",
 			team: "'evil'",
 			_retract_sound_counter: { type: "int", default: 5, persistent: false },
+
+			_sound_loop: {
+				type: "obj sound_source_individual_attache",
+				init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'thwump-retract-loop.wav', starts_with_sound_on: false})",
+				persistent: false,
+			},
+			
+			transient_obj_constructor: "[
+				add_object(_sound_loop),
+			]",
 		},
 
 		on_end_anim: "set(animation, animation)",
-		on_retract: "if(_retract_sound_counter < 5, add(_retract_sound_counter, 1),  [sound('thwump-retract-loop.wav'), set(_retract_sound_counter,0)])",
-		on_shush: "stop_sound('thwump-retract-loop.wav')",
+		on_retract: "if(_retract_sound_counter < 5, add(_retract_sound_counter, 1),  [_sound_loop.turn_on, set(_retract_sound_counter,0)])",
+		on_shush: "_sound_loop.turn_off",
 		animation: [
 		{
 			"@base": true,
