--- a/data/object_prototypes/general/sound_source.cfg
+++ b/data/object_prototypes/general/sound_source.cfg
@@ -263,6 +263,12 @@ properties: {
 			distance_attenuation_function: "@eval enum inverse",
 			falloff_distance: 600,
 		},
+		'thwump-retract-loop.wav': {
+			sound_volume_max: 1,
+			distance_attenuation_function: "@eval enum inverse",
+			falloff_distance: 600,
+		},
+		
 	}, set: "null /*cannot set this, is immutable!*/" },
 	
 	sound_fade_duration: "15", 			//Fade in/out frame duration.
