Dole out a single heart container after beating the sword kitty.

--- a/data/level/Seaside/crevice-village-house-elder.cfg
+++ b/data/level/Seaside/crevice-village-house-elder.cfg
@@ -438,6 +438,9 @@
 					set(level.zoom, 2),
 					speech_dialog(frogatto,
 						set(frogatto.facing, -1),
+						spawn('generic_acquirable_inventory_item',frogatto.mid_x,frogatto.mid_y, {kind: enum item_heart_container}),
+						[~...~],
+						set(level.zoom, 2),
 						set(frogatto.animation, 'emote_raisedfinger'),
 						[~Well!\\nThat went better than expected.~],
 						set(frogatto.animation, 'emote_confused'),
