Healed the enum references for prospera's workshop's items.

--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -755,7 +755,8 @@
 			"custom": true,
 			"label": "_291683b7",
 			"property_data": {
-				"is_in_foreground": true
+				"is_in_foreground": true,
+				"settable_item_id": "@eval enum item_bubble_shield"
 			},
 			"type": "store_item",
 			"x": 1106,
@@ -767,7 +768,8 @@
 			"custom": true,
 			"label": "_5839bb2b",
 			"property_data": {
-				"is_in_foreground": true
+				"is_in_foreground": true,
+				"settable_item_id": "@eval enum item_skipback_sigil"
 			},
 			"type": "store_item",
 			"x": 1161,
@@ -779,7 +781,8 @@
 			"custom": true,
 			"label": "_1fc8a369",
 			"property_data": {
-				"is_in_foreground": true
+				"is_in_foreground": true,
+				"settable_item_id": "@eval enum item_acid_shot_talisman"
 			},
 			"type": "store_item",
 			"x": 1305,
@@ -791,7 +794,8 @@
 			"custom": true,
 			"label": "_282bf8cd",
 			"property_data": {
-				"is_in_foreground": true
+				"is_in_foreground": true,
+				"settable_item_id": "@eval enum item_fire_shot_talisman"
 			},
 			"type": "store_item",
 			"x": 1352,
@@ -803,7 +807,8 @@
 			"custom": true,
 			"label": "_54f72a01",
 			"property_data": {
-				"is_in_foreground": true
+				"is_in_foreground": true,
+				"settable_item_id": "@eval enum item_ice_corona_talisman"
 			},
 			"type": "store_item",
 			"x": 1676,
@@ -814,6 +819,9 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_22c14046",
+			"property_data": {
+				"settable_item_id": "@eval enum item_ammo_creating"
+			},
 			"type": "store_item",
 			"x": 1729,
 			"y": 176
@@ -824,7 +832,8 @@
 			"custom": true,
 			"label": "_3ec05c39",
 			"property_data": {
-				"is_in_foreground": true
+				"is_in_foreground": true,
+				"settable_item_id": "@eval enum item_bubble_shield"
 			},
 			"type": "store_item",
 			"x": 1812,
@@ -836,7 +845,8 @@
 			"custom": true,
 			"label": "_3030f9",
 			"property_data": {
-				"is_in_foreground": true
+				"is_in_foreground": true,
+				"settable_item_id": "@eval enum item_wall_sticker_block"
 			},
 			"type": "store_item",
 			"x": 1870,
