--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -47,6 +47,9 @@ properties: {
 		persistent: false,
 	},
 
+	_sfx: { type: "obj sound_source_area", init: "object('sound_source_area', mid_x, mid_y,{ sound_file:'ambient/acid.ogg', _x_bound:0, _x2_bound:0, _y_bound:0, _y2_bound:0})", persistent: false },
+
+
 #-------------------------- constructors --------------------------#
 	liquid_obj_constructor: "commands :: [
 		add_particle_effect ;
@@ -55,8 +58,10 @@ properties: {
 			setup_shader,
 			add_object(underlay_obj),
 			add_object(top_obj),
-		]
 
+			set(_sfx._x_bound, _x_bound), set(_sfx._x2_bound, _x2_bound), set(_sfx._y_bound, _y_bound), set(_sfx._y2_bound, _y2_bound), 
+			add_object(_sfx),
+		]
 	]",
 
 	add_particle_effect: "[
