Amended the wooden crates' material_sound record so that it's something they can use both for the sound of them clattering around as they're thrown, but also so it's a valid sound record for frogatto walking on them.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -546,7 +546,7 @@
 								enum medium_metal,		sound_attenuated_by_speed('collide-metal-heavy'),
 								enum coconut,			sound_attenuated_by_speed('hopper-block'),
 								enum fruit,				sound_attenuated_by_speed('collide-fruit'),
-								enum wood_crate,		sound_attenuated_by_speed('collide-wood-crate'),
+								enum wood_plank,		sound_attenuated_by_speed('collide-wood-crate'),
 														sound_attenuated_by_speed('bump-2.wav')
 							))",
 
