--- a/data/objects/props-interactive/throwables/crate_throwable_respawning.cfg
+++ b/data/objects/props-interactive/throwables/crate_throwable_respawning.cfg
@@ -18,7 +18,7 @@ object_type: [
 		solid_dimensions_in: ["ammo"],
 		prototype: ["throwable_projectile"],
 		properties: {
-			material_sound: "enum wood_crate",
+			material_sound: "enum wood_plank",
 			is_player_ammo: "true",
 			death_fx_type: "'wood'",
 			title: "~Wooden Crate~",
