Fixed a weird issue where moth bombers weren't actually dropping their bombs upon being grabbed.  The bombs were getting orphaned in mid-air, floating where the bomber's last in-level position was.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -104,16 +104,28 @@ properties: {
 	thrown_type: "string :: me.basic_type",
 	frogourmet_tag: "string :: me.basic_type",  //this actually does have to do with thrown objects, since it's detected upon tongue touch.
 	
-		// NB:  this is completely unchecked as far as "does a thrown variant even exist", since we don't have a way to check that.
+	pre_thrown_behavior_trigger: "commands :: null", //a hook for any special cleanup an object needs to do before being thrown
+	
+		/*
+			Contrary to (likely) expectations, this isn't used for swallowing objects;  this is used for things like electric stuns that instantly change an object from its normal version, to its thrown/stuck-on-its-back version.  
+			
+			TODO: Frogatto's tongue has most of the code for handling that swap-over, inside itself; it'd be nice to pull that out into this, if possible.
+		
+			NB:  this is completely unchecked as far as "does a thrown variant even exist", since we don't have a way to check that.
+		*/
 	convert_to_thrown_variant: "commands :: [
-				remove_object(me),
+				pre_thrown_behavior_trigger
+				;
+				[
+					remove_object(me),
 
-				fire_event(throwable_obj, 'been_grabbed'),
-				fire_event(throwable_obj, 'swallowed'),
-				set(throwable_obj.event_handlers, me.event_handlers),
-				remap_attaches_from_old_to_new( me, throwable_obj),
-				remove_attaches_from_level(me),
-				add_object(throwable_obj),
+					fire_event(throwable_obj, 'been_grabbed'),
+					fire_event(throwable_obj, 'swallowed'),
+					set(throwable_obj.event_handlers, me.event_handlers),
+					remap_attaches_from_old_to_new( me, throwable_obj),
+					remove_attaches_from_level(me),
+					add_object(throwable_obj),
+				]
 			] where throwable_obj = (obj throwable <- replacement_object_with_preserved_attributes( me, me.thrown_type, me.hitpoints, me.max_hitpoints ))",
 	
 
