--- a/data/object_prototypes/enemies_general_types/ant_flying.cfg
+++ b/data/object_prototypes/enemies_general_types/ant_flying.cfg
@@ -140,7 +140,7 @@ properties: {
 	_desired_height: { type: "int", editor_info: { type: "y", value: "mid_y" }, dynamic_initialization: true },
 },
 
-on_swallowed: "lose_wings()",
+//on_swallowed: "lose_wings()",  //this does nothing; it's functionally handled by the thrown type being a regular ant.
 
 #-------------------------- collision handling --------------------------#
 on_collide_side: "[if(not (animation in ['hurt']), turn_around),set(velocity_x, -velocity_x/2)]",
