--- a/data/object_prototypes/enemies_specialized/moth_bomber.cfg
+++ b/data/object_prototypes/enemies_specialized/moth_bomber.cfg
@@ -44,6 +44,8 @@ properties: {
 
 						set(_next_behavior_trigger, cycle + duration_without_bomb)
 					]",
+					
+	pre_thrown_behavior_trigger: "if(_bomb, drop_the_bomb(_bomb))",
 },
 
 on_timer: "[proto_event('ant_flying', 'timer'),
@@ -85,7 +87,7 @@ on_spat: "[
 			remove_object(_bomb),
 			proto_event('ant_flying', 'spat')
 		]",
-		
+
 		
 animation: [
 	{
