--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -2905,6 +2905,8 @@ object_type: [
 		]",
 						
 		on_grab_objects: "if((not _swallowed) and collide_obj.hitpoints, [
+			collide_obj.pre_thrown_behavior_trigger
+			;
 			remove_object(collide_obj),
 			[
 				if(collide_obj is obj padlock_key, set((obj padlock_key <- throwable_obj).valid_levels, collide_obj.valid_levels)),
