Fixed the prior 'orphaned bomb issue' with a more rigorous destructor case, for cases of the moths dying.

--- a/data/object_prototypes/enemies_specialized/moth_bomber.cfg
+++ b/data/object_prototypes/enemies_specialized/moth_bomber.cfg
@@ -6,6 +6,13 @@ editor_info: {
 },
 timer_frequency: 50,
 properties: {
+
+#-------------------------- constructor/destructor logic --------------------------#
+	specialized_creature_category_destructor: "
+		pre_thrown_behavior_trigger
+	",
+
+#-------------------------- metadata --------------------------#
 	points_value: "23",
 	
 	title: "~Black Moth~",
