Audited and fixed up the ambient sounds so the forest mine levels all have cave ambient fx.

--- a/data/level/Cave/blind-alley.cfg
+++ b/data/level/Cave/blind-alley.cfg
@@ -15,6 +15,18 @@
 			"y": 672
 		},
 		{
+			"_uuid": "7d328ca300e740b48577773f0926e284",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_27b4656f",
+			"property_data": {
+				"_filename": "cave-drip.wav"
+			},
+			"type": "sound_emitter_intermittent",
+			"x": 800,
+			"y": 64
+		},
+		{
 			"_addr": "0x106abca00",
 			"current_frame": "normal",
 			"custom": 1,
