--- a/data/level/Forest/gazer-boss-enclave.cfg
+++ b/data/level/Forest/gazer-boss-enclave.cfg
@@ -45,6 +45,30 @@
 			"y": -444
 		},
 		{
+			"_uuid": "2a22868223294f908a3116ed2d309cee",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_27b4656f",
+			"property_data": {
+				"_filename": "cave-drip.wav"
+			},
+			"type": "sound_emitter_intermittent",
+			"x": 800,
+			"y": 64
+		},
+		{
+			"_uuid": "e668ace2124c4b97b05a3d5ea2cf0f72",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/cave.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "05af313b071e4e6785d13f950f220afb",
 			"current_frame": "normal",
 			"custom": true,
