--- a/data/level/Forest/the-500-feet.cfg
+++ b/data/level/Forest/the-500-feet.cfg
@@ -15,6 +15,30 @@
 			"y": 640
 		},
 		{
+			"_uuid": "4aa16bb326584a20a236444163c93387",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_27b4656f",
+			"property_data": {
+				"_filename": "cave-drip.wav"
+			},
+			"type": "sound_emitter_intermittent",
+			"x": 800,
+			"y": 64
+		},
+		{
+			"_uuid": "6879140995f64829b8ce2e02aaf2e27f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_d0f3aff",
+			"property_data": {
+				"sound_file": "ambient/cave.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 5952,
+			"y": 1440
+		},
+		{
 			"_addr": "142D5320",
 			"current_frame": "normal",
 			"custom": true,
