--- a/data/level/Forest/musty-mine.cfg
+++ b/data/level/Forest/musty-mine.cfg
@@ -16,6 +16,18 @@
 			"y": 2432
 		},
 		{
+			"_uuid": "8942d7ed38f7452ba2e3d28c8a989ce1",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_27b4656f",
+			"property_data": {
+				"_filename": "cave-drip.wav"
+			},
+			"type": "sound_emitter_intermittent",
+			"x": 800,
+			"y": 64
+		},
+		{
 			"_uuid": "49036c3759414a3ca70cf2543d9f41c1",
 			"current_frame": "normal",
 			"custom": true,
@@ -1660,7 +1672,7 @@
 			"property_data": {
 				"sound_file": "ambient/cave.ogg"
 			},
-			"type": "sound_source_individual",
+			"type": "sound_source_constant",
 			"x": 5952,
 			"y": 1440
 		},
