--- a/data/level/Forest/musty-pit.cfg
+++ b/data/level/Forest/musty-pit.cfg
@@ -24,6 +24,30 @@
 			"y": -512
 		},
 		{
+			"_uuid": "d1126f0a22f04f528ee2cacba044306e",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_27b4656f",
+			"property_data": {
+				"_filename": "cave-drip.wav"
+			},
+			"type": "sound_emitter_intermittent",
+			"x": 800,
+			"y": 64
+		},
+		{
+			"_uuid": "abdd8ee640904a9c8b9f9ff79185fbe0",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/cave.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "5a4a90ec38414e8da6c0d02dfa23d646",
 			"current_frame": "normal",
 			"custom": true,
