--- a/data/level/Forest/the-200-shoes.cfg
+++ b/data/level/Forest/the-200-shoes.cfg
@@ -22,6 +22,18 @@
 			"y": 1504
 		},
 		{
+			"_uuid": "47ff775d61f34a67a6519160bb33ec98",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_27b4656f",
+			"property_data": {
+				"_filename": "cave-drip.wav"
+			},
+			"type": "sound_emitter_intermittent",
+			"x": 800,
+			"y": 64
+		},
+		{
 			"_addr": "0x120bac800",
 			"current_frame": "normal",
 			"custom": 1,
@@ -106,7 +118,7 @@
 			"property_data": {
 				"sound_file": "ambient/cave.ogg"
 			},
-			"type": "sound_source_individual",
+			"type": "sound_source_constant",
 			"x": 3360,
 			"y": 1056
 		},
