--- a/data/level/Forest/the-shaft.cfg
+++ b/data/level/Forest/the-shaft.cfg
@@ -19,6 +19,30 @@
 			"y": -320
 		},
 		{
+			"_uuid": "0b6755f7be7f4a17b1630ea503f02201",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_27b4656f",
+			"property_data": {
+				"_filename": "cave-drip.wav"
+			},
+			"type": "sound_emitter_intermittent",
+			"x": 800,
+			"y": 64
+		},
+		{
+			"_uuid": "504562c3ed60481eba1a8357209f891d",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/cave.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "06285d0a76fe4a54a2a281b7e8cfaf2d",
 			"current_frame": "normal",
 			"custom": true,
