Fixed an assert whilst grabbing the glow-bugs.

--- a/data/objects/enemies/bugs/ant_flying_glow.cfg
+++ b/data/objects/enemies/bugs/ant_flying_glow.cfg
@@ -17,7 +17,7 @@ properties: {
 			time_to_die: 0,
 			parent: me,
 			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
-			scale: 1.0,
+			scale: 1.5,
 			variable_name: 'light_circular',
 		})",
 		persistent: false,
@@ -94,6 +94,20 @@ object_type: {
 	prototype: ["throwable_small_enemy"],
 	properties: {
 		taxonomy: "TaxonomyType :: enum bug",
+
+		light_circular: {
+			type: "obj light_source_attache",
+			init: "object('light_source_attache', mid_x, mid_y, {
+				_sprite_type: enum eased_halo,
+				time_to_die: 0,
+				parent: me,
+				custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
+				scale: 1.5,
+				variable_name: 'light_circular',
+			})",
+			persistent: false,
+		},
+
 	},
 	animation: [
 		{
