--- a/data/level/Forest/tempo-bridge.cfg
+++ b/data/level/Forest/tempo-bridge.cfg
@@ -676,7 +676,7 @@
 										fire_event('mushroom_intro')
 									)]
 								])",
-			"on_talk": "if(level.player.get_stored_event('talked_to_whatran'),
+			"on_talk": "[if(level.player.get_stored_event('talked_to_whatran') and level.player.get_stored_event('whatran_warned'),
 			speech_dialog(
 			self, [~Anything else you wanted\\nto ask about?~,
 			~What do these mushrooms do?~, [speech_dialog(
@@ -728,6 +728,51 @@
 			self, [~Okay. Would you rather\\neat a bucket full of broken glass...~],
 			set(level.player.animation, 'emote_impatient'),
 			level.player, [~On second thought, I should get moving.~]
+			),if(level.player.get_stored_event('talked_to_whatran') and not level.player.get_stored_event('whatran_warned'),
+			speech_dialog(
+			self, [~Anything else you wanted\\nto ask about?~,
+			~What do these mushrooms do?~, [speech_dialog(
+			set(level.player.animation, 'emote_confused'),
+			level.player, [~So I get that these mushrooms are\\ndangerous, but... how, exactly?~],
+			self, [~It depends. I've seen all kinds\\nof ridiculous mutations.~],
+			[~They can regenerate pretty quickly.~],
+			[~Some of them have nasty teeth.~],
+			[~Others attack with spores.~],
+			[~And who knows what sort of crazy crap\\nis happening deeper in the swamp?~]
+			)],
+			~Any other dangers?~,[speech_dialog(
+			set(level.player.animation, 'emote_talk'),
+			level.player, [~Are there any other\\ndangers out there?~],
+			set(level.player.animation, 'emote_geez'),
+			level.player, [~You know, <em>besides</em> sentient killer mushrooms.~],
+			self, [~Yeah, the swamp was home to some other animals.~],
+			[~They've always been ill-tempered.~],
+			[~So I'm sure the toxic vapors\\nhaven't improved their mood.~],
+			set(level.player.animation, 'emote_talk'),
+			level.player, [~How bad is the water?~],
+			self, [~Well, a buddy of mine\\nstepped in some goop.~],
+			[~It burned him pretty badly,\\nbut he healed up after a few days.~],
+			[~That was just across the bridge, though.\\nThat swamp is <em>huge.</em>~],
+			[~I don't know what it's like a few miles in,\\nbut just play it safe and don't go swimming.~]
+			)],
+			~How can I kill them?~, [speech_dialog(
+			set(level.player.animation, 'emote_confused'),
+			level.player, [~Have you discovered anything\\nthe mushrooms are weak against?~],
+			self, [~No, but there are plenty of\\nways to take them out.~],
+			[~Bullets, blades, blistering blazes,\\nblunt bludgeons, black blight...~],
+			set(level.player.animation, 'emote_angry'),
+			level.player, [~Stop alliterating and be serious!\\nI'm going to be in real danger here.~],
+			self, [~Sorry. Have I told you\\nhow boring it is out here?~],
+			[~Really, though, killing them isn't the problem.~],
+			[~It's their overwhelming numbers\\nand all that poison.~]
+			)],
+			~Has anyone been there?~, [speech_dialog(
+			set(level.player.animation, 'emote_talk'),
+			level.player, [~Has anyone else actually\\nexplored the swamp?~],
+			self, [~Some folks came by a few weeks ago,\\nneeding to head that way.~],
+			[~No idea how that turned out.~],
+			[~I don't want to assume the worst,\\nbut they sure didn't come back here.~],
+			[~In fact, I've never seen anything\\nfriendly come <em>out</em> of the swamp.~]
 			)]]) ,speech_dialog(
 						self, [~Hey.  Would you rather have hooks\\nfor hands, or buckets for feet?~,
 						~Hooks for hands.~, [speech_dialog(
@@ -752,7 +797,7 @@
 							self, [~Sorry, I just get\\nreally bored standing here all day.~],
 							fire_event('mushroom_intro')
 						)]
-					]))",
+					]))]",
 			"type": "whatran_npc",
 			"x": 576,
 			"y": 369
