Effects for the fire in forest fireplaces.

--- a/data/objects/props/forest-interior/forest_interior_fireplace_stone.cfg
+++ b/data/objects/props/forest-interior/forest_interior_fireplace_stone.cfg
@@ -1,5 +1,6 @@
 {
 id: "forest_interior_fireplace_stone",
+prototype: ['transient_object'],
 zorder: "@include data/zorder.cfg:background_parallax_objects",
 
 editor_info: {
@@ -8,6 +9,71 @@ editor_info: {
 
 parallax_scale_x: 1050,
 parallax_scale_y: 1000,
+
+properties: {
+#-------------------------- constructor/destructor --------------------------#
+	transient_obj_constructor: "[
+		add_object(fire_particles),
+		add_object(sfx),
+
+		set(fire_particles.parallax_scale_x, 1.050),
+		set(sfx.parallax_scale_x, 1.050),
+		;
+		fire_particles.turn_on,
+
+
+	]",
+
+	
+#-------------------------- fx --------------------------#
+
+	fire_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
+			_particle_type: 'bonfire',
+			zorder: me.zorder + 1,
+			parent: me,
+			time_to_die: 200,
+			custom_relative_pos_default: {mid_x: -65, mid_y: 190},
+			customized_spawn_rects: [{
+				particle_id: '3_fire_bright',
+				rect: [-40, 40, -8, 8],
+			},{
+				particle_id: '2_fire_med',
+				rect: [-40, 40, -10, 10],
+			},{
+				particle_id: '1_fire_sparks',
+				rect: [-40, 40, -20, 20],
+			}],
+
+			customized_spawn_rates: [{
+				particle_id: '3_fire_bright',
+				magnitude: 500,
+			},{
+				particle_id: '2_fire_med',
+				magnitude: 1000,
+			},{
+				particle_id: '1_fire_sparks',
+				magnitude: 200,
+			}],
+			variable_name: 'fire_particles',
+		})",
+		persistent: false,
+	},
+
+	sfx: {
+		type: "obj sound_source_individual_attache",
+		init: "object('sound_source_individual_attache', mid_x, mid_y, {
+			parent: me,
+			sound_file:'ambient/fireplace.ogg',
+			starts_with_sound_on: true,
+			variable_name: 'sfx',
+		})",
+		persistent: false,
+	},
+
+},
+
 
 animation: {
 	id: "normal",
