Updated the effects for the forest fireplaces to work around some bugs/issues.

--- a/data/objects/props/forest-interior/forest_interior_fireplace_stone.cfg
+++ b/data/objects/props/forest-interior/forest_interior_fireplace_stone.cfg
@@ -15,17 +15,39 @@ properties: {
 	transient_obj_constructor: "[
 		add_object(fire_particles),
 		add_object(sfx),
+		add_object(lighting),
 
 		set(fire_particles.parallax_scale_x, 1.050),
 		set(sfx.parallax_scale_x, 1.050),
+		set(lighting.parallax_scale_x, 1.050),
 		;
 		fire_particles.turn_on,
 
-
+		set(fire_particles.animation, {
+			id: 'normal',
+			image: 'effects/particles.png',
+			x: 86, y: 73, w: 1, h: 1,
+			duration: -1,
+		}),
 	]",
 
 	
 #-------------------------- fx --------------------------#
+	lighting: {
+		type: "obj effects_attache_glow_source",
+		init: "object('effects_attache_glow_source', mid_x, mid_y, {
+			time_to_die: 0,
+			parent: me,
+			custom_relative_pos_default: {mid_x: -40, mid_y: 155},
+			base_alpha: 130,
+			flicker_type: enum sputter,
+			graphics: enum firey,
+			scale_factor: 1.30,
+			zorder: lib.zorder.get('interior_decor'),
+			variable_name: 'lighting',
+		})",
+		persistent: false,
+	},
 
 	fire_particles: {
 		type: "obj legacy_particle_attache",
@@ -34,7 +56,7 @@ properties: {
 			zorder: me.zorder + 1,
 			parent: me,
 			time_to_die: 200,
-			custom_relative_pos_default: {mid_x: -65, mid_y: 190},
+			custom_relative_pos_default: {mid_x: -40, mid_y: 165},
 			customized_spawn_rects: [{
 				particle_id: '3_fire_bright',
 				rect: [-40, 40, -8, 8],
