Cleaned up the moist-underground sound a bit, and added a record for it to the sound-source prototype.

--- a/data/level/Forest/prosperas-house.cfg
+++ b/data/level/Forest/prosperas-house.cfg
@@ -1556,6 +1556,18 @@
 			"y": -299
 		},
 		{
+			"_uuid": "ec2876bd41be471087b4f8d4b70e276a",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "5b3d17eeca334be69c50c6c10f8510d6",
 			"current_frame": "normal",
 			"custom": true,
