--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -851,7 +851,19 @@
 			"type": "store_item",
 			"x": 1870,
 			"y": 229
-		}
+		},
+		{
+			"_uuid": "e1ac6bc47f5144db8ac5c77e40adcd99",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
 	],
 	"dimensions": [384,-640,3455,767],
 	"id": "prosperas-workshop.cfg",
