--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -44,6 +44,18 @@
 			"y": 93
 		},
 		{
+			"_uuid": "9045da64987f45a3b98b0de27a4d1392",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "7acf3e0e33ab4f83ba49e05977b49ef4",
 			"current_frame": "normal",
 			"custom": true,
