--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -42,6 +42,18 @@
 			"y": 322
 		},
 		{
+			"_uuid": "2bb2857212294997bd4c06beea6b9b2b",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "dd14b59692ea4a119ede5d2ab66e287c",
 			"current_frame": "normal",
 			"custom": true,
