--- a/data/level/Forest/tempo-village-house-1.cfg
+++ b/data/level/Forest/tempo-village-house-1.cfg
@@ -26,6 +26,18 @@
 			"y": -128
 		},
 		{
+			"_uuid": "591c89c6e8fd4188863d5d82297339ac",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "e8e5aa82d1244e87ab0ebc4bb94f22d6",
 			"current_frame": "normal",
 			"custom": true,
