--- a/data/level/Forest/tempo-village-house-2.cfg
+++ b/data/level/Forest/tempo-village-house-2.cfg
@@ -17,6 +17,18 @@
 			"y": 350
 		},
 		{
+			"_uuid": "6a51c53f695c424591d28f4b055bf557",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "87ab686908264186a60340327e6a38a0",
 			"current_frame": "normal",
 			"custom": true,
