--- a/data/level/Forest/tempo-village-house-3.cfg
+++ b/data/level/Forest/tempo-village-house-3.cfg
@@ -17,6 +17,18 @@
 			"y": 384
 		},
 		{
+			"_uuid": "2d8802d3e4254990940d52ca9240bf09",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "1a4efa118ae1475f861dae11fb8797d9",
 			"current_frame": "normal",
 			"custom": true,
