--- a/data/level/Forest/tempo-village-house-store.cfg
+++ b/data/level/Forest/tempo-village-house-store.cfg
@@ -17,6 +17,18 @@
 			"y": 288
 		},
 		{
+			"_uuid": "deaf3418304d412c80e5e6be85c14c6f",
+			"current_frame": "normal",
+			"custom": 1,
+			"label": "_2104b298",
+			"property_data": {
+				"sound_file": "ambient/moist-underground.ogg"
+			},
+			"type": "sound_source_constant",
+			"x": 3360,
+			"y": 1056
+		},
+		{
 			"_uuid": "ecfe780b78574b83a778d1a726f9372c",
 			"current_frame": "normal",
 			"custom": true,
