--- a/data/object_prototypes/general/sound_source.cfg
+++ b/data/object_prototypes/general/sound_source.cfg
@@ -178,6 +178,11 @@ properties: {
 			distance_attenuation_function: "@eval enum linearly",
 			falloff_distance: 600,
 		},
+		'ambient/moist-underground.ogg': {
+			sound_volume_max: 1.0,
+			distance_attenuation_function: "@eval enum inverse",
+			falloff_distance: 600,
+		},
 		'ambient/fountain-small.ogg': {
 			sound_volume_max: 0.35,
 			distance_attenuation_function: "@eval enum inverse",
