Added a serialization fix for store items.

--- a/data/objects/items/store-items/store_item.cfg
+++ b/data/objects/items/store-items/store_item.cfg
@@ -5,7 +5,7 @@ properties: {
 		/*
 			This is the only thing you need to configure in property_data; as long as this is set, the rest of the item will neatly read in all the regular item data.
 		*/
-	settable_item_id: { type: "InventoryItemType", init: "enum item_generic_usable" },
+	settable_item_id: { type: "InventoryItemType", default: "@eval enum item_generic_usable" },
 	item_id: "settable_item_id",
 
 
