Added lighting to prospera's house.

--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -864,6 +864,36 @@
 			"x": 3360,
 			"y": 1056
 		},
+		{
+			"_uuid": "f41edd94642442c8bcd1ff4607cd8c88",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7bf120c9",
+			"property_data": {
+				"shadow_opacity": 0.70,
+				"shadow_color": {
+					"r": 0.074509,
+					"g": 0.0,
+					"b": 0.105882
+				}
+			},
+			"type": "shadow_effect_controller",
+			"x": 437,
+			"y": 245
+		},
+		{
+			"_uuid": "3645cc5162c64fd9aaf814469baeb4c5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2818991e",
+			"property_data": {
+				"_x_bound": 884,
+				"_y_bound": 48
+			},
+			"type": "light_controller",
+			"x": 1460,
+			"y": 147
+		},
 	],
 	"dimensions": [384,-640,3455,767],
 	"id": "prosperas-workshop.cfg",
