--- a/data/objects/effects/silhouettes/silhouette_heart.cfg
+++ b/data/objects/effects/silhouettes/silhouette_heart.cfg
@@ -5,10 +5,17 @@ hitpoints: 1,
 properties: {
 	_tracker: {type: "decimal", default: 1.75, persistent: false},
 },
-on_create: "[#set(brightness,512)#set(scale,0.5)]",
+on_create: "[
+	//set(brightness,512),
+	set(scale,0.5),
+]",
 
-#on_process="[add(scale,0.1),set(alpha,max(alpha-1,0)),if(cycle>300,die())]"
-on_process: "[set(scale,2.5-_tracker),set(_tracker,_tracker*0.85),set(alpha,max((alpha*92)/100,0)),if(cycle>300,die())]",
+on_process: "[
+	set(scale, 2.5 - _tracker),
+	set(_tracker, _tracker*0.85),
+	set(alpha, lib.math.round( max((alpha*92.0)/100,0 ) ) ),
+	if(cycle>300, die())
+]",
 animation: {
 	no_remove_alpha_borders: true,
 	id: "normal",
