Changed a couple enum init declarations to defaults, so they can serialize if necessary.

--- a/data/objects/enemies/mushrooms/ploompus.cfg
+++ b/data/objects/enemies/mushrooms/ploompus.cfg
@@ -102,7 +102,7 @@ properties: {
 #-------------------------- vars --------------------------#
 	_rotate_decay: { type: "decimal", default: 0.0 },
 	_orbit_angle: { type: "decimal", default: 0.0 },
-	_pl_behavior: { type: "enum { hovering, preparing_shot, shooting }", init: "enum hovering" },
+	_pl_behavior: { type: "enum { hovering, preparing_shot, shooting }", default: "@eval enum hovering" },
 
 #-------------------------- tmp vars --------------------------#
 	_shot_counter: { type: "int", default: 0, persistent: false },
