--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -471,7 +471,7 @@ object_type: [
 		dies_on_inactive: true,
 		properties: {
 			set_time_to_live:  "def(int time) -> commands [set(max_hitpoints, time),set(hitpoints,time)]",
-			particle_colors: { type: "ParticleColorNames",  init: "enum stone" },
+			particle_colors: { type: "ParticleColorNames",  default: "@eval enum stone" },
 			particle_name: "switch(	particle_colors,
 														enum wooden, 'wooden',
 														enum metal, 'metal',
