Set up custom activation_areas for the flying mushroom enemies, so they're not all on 'always_active'.

--- a/data/objects/enemies/mushrooms/mushroom_jellyfish.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_jellyfish.cfg
@@ -4,6 +4,17 @@ id: "mushroom_jellyfish",
 friction: 4000,
 prototype: ["mushroom_flier"],
 properties: {
+#-------------------------- constructor/destructor logic --------------------------#
+	ant_flying_variant_constructor: "[
+		set(activation_border, 150),
+		set(activation_area, [
+			_x_bound - 200,
+			_desired_height - 200,
+			_x2_bound - _x_bound + 200,
+			_dive_height - _desired_height + 400
+		]),
+	]",	
+
 #-------------------------- metadata --------------------------#
 	title: "~Mushroom Jellyfish~",
 	description: "~The lost tribe of Ter (who would say they knew quite where they were, thank you very much, if you could find them to ask) make a delicious soup with these little guys. Shame you can’t find them, their soup, or the only recipe they left.~",
