--- a/data/objects/enemies/mushrooms/mushroom_sponge_cloud_shooter.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_sponge_cloud_shooter.cfg
@@ -4,6 +4,21 @@ hitpoints: 200,
 
 prototype: ["mushroom_flier"],
 properties: {
+#-------------------------- constructor/destructor logic --------------------------#
+	ant_flying_variant_constructor: "commands :: [
+		set(activation_border, 150),
+		
+		/*
+			These guys need an extra-wide activation_area because they are willing to chase the player quite a ways past their normal bounds.  They don't dive particularly far, though.
+		*/
+		set(activation_area, [
+			_x_bound - bounds_width,
+			_desired_height - 200,
+			bounds_width * 3,
+			bounds_height + 400
+		]) where bounds_width = abs(_x2_bound - _x_bound)
+		   where bounds_height = abs(_dive_height - _desired_height),
+	]",
 
 #-------------------------- metadata --------------------------#
 	title: "~Sponge Cloud~",
