--- a/data/objects/enemies/mushrooms/ploompus.cfg
+++ b/data/objects/enemies/mushrooms/ploompus.cfg
@@ -8,10 +8,21 @@ platform_area: [7,13,38,14],
 
 properties: {
 #-------------------------- constructor/destructor logic --------------------------#
-	specialized_creature_category_constructor: "commands :: [
-								if(_init_x = null, set(_init_x, midpoint_x)),
-								if(_init_y = null, set(_init_y, midpoint_y)),
-							]",
+	ant_flying_variant_constructor: "commands :: [
+		if(_init_x = null, set(_init_x, midpoint_x)),
+		if(_init_y = null, set(_init_y, midpoint_y)),
+		set(activation_border, 150),
+		;
+		/*
+			Give these guys a really wide berth to fire their shots, so they will track the player and shoot at them from multiple screens away.  Notably — we only care about extending this *downward*; these guys don't need to shoot upwards very well.
+		*/
+		set(activation_area, [
+			_init_x - 1000,
+			_init_y - 200,
+			2000,
+			3500
+		]),
+	]",
 
 
 #-------------------------- metadata --------------------------#
