--- a/data/objects/enemies/mushrooms/mushroom_grabber.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_grabber.cfg
@@ -5,9 +5,16 @@ prototype: ["mushroom_flier"],
 zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 properties: {
 #-------------------------- constructor/destructor logic --------------------------#
-	specialized_creature_category_constructor: "commands :: [
-								if(_behavior = null,set(_behavior,'hover')),
-							]",
+	ant_flying_variant_constructor: "commands :: [
+		if(_behavior = null,set(_behavior,'hover')),
+		set(activation_border, 150),
+		set(activation_area, [
+			_x_bound - 200,
+			_desired_height - 200,
+			_x2_bound - _x_bound + 200,
+			_dive_height - _desired_height + 400
+		]),
+	]",
 
 #-------------------------- metadata --------------------------#
 	title: "~Mushroom Grabber~",
