Fixed frogatto's underwater attack animations bizarrely, inexplicably, having a body_area set to none instead of all.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -2374,7 +2374,7 @@ animation: [
 		accel_x: 0,
 		accel_y: 0,
 		pad: 3,
-		body_area: "none",
+		body_area: "all",
 		feet_width: 5,
 		id: "underwater_breath_attack_up",
 		x: 1, y: 1, w: 51, h: 51,
@@ -2387,7 +2387,7 @@ animation: [
 		accel_x: 0,
 		accel_y: 0,
 		pad: 3,
-		body_area: "none",
+		body_area: "all",
 		feet_width: 5,
 		id: "underwater_breath_attack_up_diag",
 		x: 56, y: 1, w: 51, h: 51,
@@ -2400,7 +2400,7 @@ animation: [
 		accel_x: 0,
 		accel_y: 0,
 		pad: 3,
-		body_area: "none",
+		body_area: "all",
 		feet_width: 5,
 		id: "underwater_breath_attack_side",
 		x: 111, y: 1, w: 51, h: 51,
@@ -2413,7 +2413,7 @@ animation: [
 		accel_x: 0,
 		accel_y: 0,
 		pad: 3,
-		body_area: "none",
+		body_area: "all",
 		feet_width: 5,
 		id: "underwater_breath_attack_down_diag",
 		x: 166, y: 1, w: 51, h: 51,
@@ -2426,7 +2426,7 @@ animation: [
 		accel_x: 0,
 		accel_y: 0,
 		pad: 3,
-		body_area: "none",
+		body_area: "all",
 		feet_width: 5,
 		id: "underwater_breath_attack_down",
 		x: 221, y: 1, w: 51, h: 51,
