Correctly flag the berd-is-missing conversation as completed so we don't repeat it ad nauseam.

--- a/data/level/Forest/ignominious-interlude.cfg
+++ b/data/level/Forest/ignominious-interlude.cfg
@@ -947,6 +947,7 @@
 					frogatto,	[~Uh…~],
 					frogatto,	[~…~],
 					frogatto,	[~Round about, right now, this would be\\nthe perfect time for that feathered friend of ours.~],
+								frogatto.store_event('missing_berd_post_mushroom_boss_speech',1),
 								frogatto.scripted_move_to_x(70,-1, def() -> commands [schedule(1,fire_event(me, 'conversation_part_2'))])
 				),
 			
